[GTK] REGRESSION(r207396) Build broken with Clang. https://bugs.webkit.org/show_bug.cgi?id=163599

Suggested and reviewed by Darin Adler.

* css/CSSPrimitiveValue.cpp:
(WebCore::CSSPrimitiveValue::getStringValue):

Canonical link: https://commits.webkit.org/181443@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207533 268f45cc-cd09-0410-ab3c-d52691b4dbfc